--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "amarjitph",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Amarjit-ph.github.io/Amarjit-ph",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -12,6 +13,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
